--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/IrinaBIG/movies-explorer-api/issues"
   },
-  "homepage": "https://github.com/IrinaBIG/movies-explorer-api#readme",
+  "homepage": ".",
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^8.26.0",
